--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Clase 1 variables</title>
 </head>
 <body>
-    <script src="./js/clase-1.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    <script src="./js/clase-1.js"></script>
 </body>
 </html>
