--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clase 1 variables</title>
+    <link rel="stylesheet" href="./src/css/main.css">
 </head>
 <body>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    <script src="./js/clase-1.js"></script>
+    <div class="gameboard">
+        <div id="violeta" class="block-color" data-color="violeta"></div>
+        <div id="celeste" class="block-color" data-color="celeste"></div>
+        <div id="naranja" class="block-color" data-color="naranja"></div>
+        <div id="verde" class="block-color" data-color="verde"></div>
+        <button id="btnEmpezar" class="btn-star" onclick="empezarJuego()">Jugar!</button>
+    </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+<script src="./js/ejercicio1.js"></script>
 </body>
 </html>
